name: ghc-dbg
version: 0.1

cabal-version: 1.22
build-type: Simple
license: BSD
category: Debugger
synopsis: An experimental debugger for Haskell
tested-with: GHC==8.6.5

source-repository head
  type: git
  location: git@github.com:krangelov/ghc-dbg.git

library
  exposed-modules:
    GHC.Debugger
  build-depends: ghc-heap,
                 base,
                 containers
  extra-libraries: dw
  c-sources: debugger.c,
             debugger.h
  default-language: Haskell2010
  build-tools: hsc2hs
  include-dirs: .

executable ghc-dbg
  main-is: main.hs
  build-depends: ghc-dbg, ghc-heap,
                 base,
                 containers,
                 zenc,
                 pretty,
                 ncurses
  default-language:    Haskell2010
