name: hdb
version: 0.1

cabal-version: 1.22
build-type: Simple
license: BSD
category: Debugger
synopsis: An experimental debugger for Haskell
tested-with: GHC==8.6.5

source-repository head
  type: git
  location: git@github.com:krangelov/hdb.git

library
  exposed-modules:
    HDB
  build-depends: ghc-heap,
                 base,
                 containers
  extra-libraries: dw
  c-sources: debugger.c
  default-language: Haskell2010
  build-tools: hsc2hs
  include-dirs: .

executable hdb-demo
  main-is: main.hs
  build-depends: ghc-heap,
                 base,
                 hdb
  default-language:    Haskell2010
